# py3moin

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.rst  pyproject.toml  pytest  pytest.ini  setup.py  wikiconfig.py  wikiserver.py  wikiserverconfig.py
MoinMoin/: Page.py  PageEditor.py  PageGraphicalEditor.py  __init__.py  _template.py  caching.py  conftest.py  decorator.py  error.py  log.py  multiconfig.py  packages.py  user.py  version.py  wikisync.py  wikiutil.py  wsgiapp.py
MoinMoin/_tests/: __init__.py  _test_template.py  ldap_testbase.py  maketestwiki.py  pep8.py  test_Page.py  test_PageEditor.py  test_caching.py  test_error.py  test_packages.py  test_sourcecode.py  test_user.py  test_wikisync.py  test_wikiutil.py  test_wsgiapp.py  wikiconfig.py
MoinMoin/action/: AttachFile.py  CopyPage.py  DeletePage.py  Despam.py  LikePages.py  Load.py  LocalSiteMap.py  MyPages.py  PackagePages.py  RenamePage.py  RenderAsDocbook.py  Save.py  SlideShow.py  SpellCheck.py  SubscribeUser.py  SyncPages.py  __init__.py  anywikidraw.py  backup.py  bookmark.py  cache.py  chart.py  diff.py  edit.py  fckdialog.py  fullsearch.py  info.py  language_setup.py  links.py  login.py  logout.py  newaccount.py  newpage.py  pollsistersites.py  quicklink.py  quickunlink.py  recoverpass.py  refresh.py  revert.py  rss_rc.py  (+12 more)
MoinMoin/auth/: _PHPsessionParser.py  __init__.py  botbouncer.py  cas.py  http.py  (+8 more)
contrib/: raw_wsgi_bench.py
docs/: CHANGES  INSTALL.html
jabberbot/: __init__.py  bot.py  commands.py  config.py  i18n.py  oob.py  xmlrpcbot.py  xmppbot.py
tests/: conftest.py
(+639 files in other folders)
